--- a/Frontend/moveinn/src/app/globals.css
+++ b/Frontend/moveinn/src/app/globals.css
@@ -61,3 +61,10 @@
   }
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
